@@ -1,1 +1,4 @@
 # apache-spark-processor-city
+
+# Execute the command below
+mvn spring-boot:run -Dspring-boot.run.jvmArguments="--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/sun.util.calendar=ALL-UNNAMED --add-exports=java.base/sun.security.action=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
